modificacion imagen de las meta-etiquetas

--- a/Daniel-vidal/index.html
+++ b/Daniel-vidal/index.html
@@ -7,23 +7,23 @@
     <meta name="twitter:site" content="@danielv">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#0d7e8b">
-    <link rel="apple-touch-icon" href="https://Daniel08vidal.github.io/portafolioD/daniel-vidal/assets/favicon.png">
-    <link rel="icon" type="image/png" href="https://Daniel08vidal.github.io/portafolioD/daniel-vidal/assets/favicon.png">
+    <link rel="apple-touch-icon" href="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/favicon.png">
+    <link rel="icon" type="image/png" href="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/favicon.png">
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&amp;display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="preload" as="style"  href="style.css">
     <title>Portafolio | Daniel Vidal</title>
-    <meta name="twitter:title" property="og:title" content="Hola, soy Daniel Vidal, Desarrollador Web">
-    <meta content="Hola bienvenidos a mi Portafolio, soy Daniel Vidal, Desarrollador Web" name="description">
+    <meta name="twitter:title" property="og:title" content="Hola, soy Daniel Vidal, Programador Web">
+    <meta content="Hola bienvenidos a mi Portafolio, soy Daniel Vidal, Programador Web" name="description">
 
-    <meta content="Hola bienvenidos a mi Portafolio, soy Daniel Vidal, Desarrollador Web" name="twitter:description" property="og:description">
-    <meta content="https://Daniel08vidal.github.io/portafolioD/daniel-vidal" property="og:url">
-    <meta content="https://Daniel08vidal.github.io/portafolioD/daniel-vidal" property="twitter:url">
-    <link rel="canonical" href="https://Daniel08vidal.github.io/portafolioD/daniel-vidal">
+    <meta content="Hola bienvenidos a mi Portafolio, soy Daniel Vidal, Programador Web" name="twitter:description" property="og:description">
+    <meta content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal" property="og:url">
+    <meta content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal" property="twitter:url">
+    <link rel="canonical" href="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal">
     
-    <meta property="og:image" content="https://Daniel08vidal.github.io/portafolioD/daniel-vidal/assets/desarrollador.svg">
-    <meta name="twitter:image" content="https://Daniel08vidal.github.io/portafolioD/daniel-vidal/assets/desarrollador.svg">
+    <meta property="og:image" content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/desarrollador.svg">
+    <meta name="twitter:image" content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/desarrollador.svg">
     
 
 </head>
