se volvio a editar la imagen de la meta-etiqueta de svg a png

--- a/Daniel-vidal/index.html
+++ b/Daniel-vidal/index.html
@@ -22,8 +22,8 @@
     <meta content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal" property="twitter:url">
     <link rel="canonical" href="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal">
     
-    <meta property="og:image" content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/desarrollador.svg">
-    <meta name="twitter:image" content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/desarrollador.svg">
+    <meta property="og:image" content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/proyecto5.png">
+    <meta name="twitter:image" content="https://Daniel08vidal.github.io/portafolioD/Daniel-vidal/assets/proyecto5.png">
     
 
 </head>
