--- a/Daniel-vidal/index.html
+++ b/Daniel-vidal/index.html
@@ -120,7 +120,124 @@
                <a href="#proyectos" class="menu_item" data-url="proyectos">Proyectos</a>
                <a href="#skills" class="menu_item" data-url="skills">Habilidades</a>
                <a href="#contacto" class="menu_item contact-active" data-url="contacto">Contacto</a> 
+               <button class="switch" id="switch">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                <path style="fill:#FFCD00;" d="M106.454,269.991l-25.046-34.65l33.698-20.287c7.729-4.653,12.046-13.374,11.062-22.341
+                    l-4.293-39.098l39.327-0.72c9.02-0.165,17.12-5.559,20.751-13.817l15.832-36.007l34.418,19.04
+                    c7.894,4.367,17.605,3.746,24.879-1.591l31.714-23.267l20.287,33.698c4.653,7.729,13.374,12.046,22.341,11.062l39.099-4.293
+                    l0.72,39.327c0.165,9.02,5.559,17.12,13.817,20.751l36.007,15.832l-19.04,34.418c-4.367,7.894-4.509,14.534-0.242,21.943H106.454z"
+                    />
+                <path style="fill:#FFEB99;" d="M139.731,269.991c0-63.19,51.226-114.415,114.415-114.415s114.415,51.226,114.415,114.415H139.731z"
+                    />
+                <g style="opacity:0.75;">
+                    <path style="fill:#FFFFFF;" d="M177.608,277.875c-4.355,0-7.884-3.53-7.884-7.884c0-46.551,37.871-84.422,84.422-84.422
+                        c4.355,0,7.884,3.53,7.884,7.884s-3.529,7.884-7.884,7.884c-37.856,0-68.653,30.798-68.653,68.653
+                        C185.493,274.345,181.964,277.875,177.608,277.875z"/>
+                </g>
+                <g style="opacity:0.25;">
+                    <path style="fill:#DDB200;" d="M403.379,247.09H90.723l16.553,22.901h33.276h29.993c0,4.354,3.529,7.884,7.884,7.884
+                        c4.355,0,7.884-3.53,7.884-7.884h183.069h33.223c-4.267-7.408-4.125-14.049,0.242-21.943L403.379,247.09z"/>
+                </g>
+                <path style="fill:#CCE4F7;" d="M379.21,414.747h57.633c12.564,0,22.843-10.279,22.843-22.843l0,0
+                    c0-12.564-10.279-22.843-22.843-22.843h-18.397l-20.056,0.002h-21.532c-14.704,0-26.734-12.031-26.734-26.734l0,0
+                    c0-14.704,12.031-26.734,26.734-26.734h21.532h20.056h70.712c12.564,0,22.843-10.279,22.843-22.843l0,0
+                    c0-12.564-10.279-22.843-22.843-22.843H379.21H132.79H22.843C10.279,269.91,0,280.189,0,292.752l0,0
+                    c0,12.564,10.279,22.843,22.843,22.843h70.712h10.012h21.531c14.704,0,26.733,12.031,26.733,26.733l0,0
+                    c0,14.704-12.031,26.733-26.733,26.733h-21.531H93.554H75.157c-12.564,0-22.843,10.279-22.843,22.843l0,0
+                    c0,12.564,10.279,22.843,22.843,22.843h57.633H379.21z"/>
+                <g>
+                    <path style="fill:#52A2E7;" d="M306.501,319.844H190.734c-4.355,0-7.884-3.53-7.884-7.884s3.529-7.884,7.884-7.884h115.766
+                        c4.355,0,7.884,3.53,7.884,7.884S310.856,319.844,306.501,319.844z"/>
+                    <path style="fill:#52A2E7;" d="M279.605,350.213H217.63c-4.355,0-7.884-3.53-7.884-7.884c0-4.354,3.529-7.884,7.884-7.884h61.976
+                        c4.355,0,7.884,3.53,7.884,7.884C287.49,346.683,283.961,350.213,279.605,350.213z"/>
+                    <path style="fill:#52A2E7;" d="M311.292,379.766h-125.35c-4.355,0-7.884-3.53-7.884-7.884c0-4.354,3.529-7.884,7.884-7.884h125.35
+                        c4.355,0,7.884,3.53,7.884,7.884C319.177,376.236,315.648,379.766,311.292,379.766z"/>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                </svg>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 499.6 499.6" style="enable-background:new 0 0 499.6 499.6;" xml:space="preserve">
+<circle style="fill:#513C7F;" cx="249.6" cy="249.8" r="249.6"/>
+<path style="fill:#403266;" d="M426.4,73c97.6,97.6,97.6,255.2,0,352.8s-255.2,97.6-352.8,0"/>
+<path style="fill:#C4C4C4;" d="M340.8,368.2c-91.2,0-164.8-73.6-164.8-164.8c0-46.4,19.2-88,49.6-117.6c-80,12-141.6,80.8-141.6,164
+	c0,91.2,74.4,165.6,165.6,165.6c46.4,0,88-19.2,117.6-49.6C359.2,367.4,349.6,368.2,340.8,368.2z"/>
+<path style="fill:#A8A8A8;" d="M249.6,415.4c46.4,0,88-19.2,117.6-49.6c-8.8,1.6-17.6,2.4-26.4,2.4c-50.4,0-96-22.4-125.6-58.4"/>
+<circle style="fill:#FFC114;" cx="316.8" cy="114.6" r="25.6"/>
+<path style="fill:#FCA12A;" d="M335.2,96.2c10.4,10.4,10.4,26.4,0,36c-10.4,10.4-26.4,10.4-36,0"/>
+<path style="fill:#2D254C;" d="M499.2,237.8l-82.4-82.4l-120,120l140,140C480.8,365,501.6,301,499.2,237.8z"/>
+<g>
+	<path style="fill:#858A8C;" d="M497.6,253.8c0,36-28,31.2-64,31.2l0,0c-36,0-64-28.8-64-64.8v-20.8c0-36,28-64.8,64-64.8l0,0
+		c36,0,64,28.8,64,64.8V253.8z"/>
+	<path style="fill:#858A8C;" d="M401.6,239.4c0,24.8-19.2,45.6-44,45.6l0,0c-24.8,0-44-20-44-45.6V225c0-24.8,19.2-45.6,44-45.6l0,0
+		c24.8,0,44,20,44,45.6V239.4z"/>
+	<path style="fill:#858A8C;" d="M497.6,253.8c0,16-11.2,36-27.2,36h-152c-16,0-28.8-20-28.8-36l0,0c0-16,12.8-28,28.8-28h152.8
+		C486.4,225.8,497.6,237.8,497.6,253.8L497.6,253.8z"/>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+                </svg>
+
+          </button>
            </div>
+
         </section>
         
      </header> 
@@ -129,7 +246,7 @@
     <div class="start_container ">
         <div class="start_texts text-center text-lg-left" >
             <h1 class="start_title">Hola, soy Daniel Vidal <br>
-                [<i>Software Developer</i>]</h1>
+                [<i>Front-End Developer</i>]</h1>
             <a href="#contacto" class="btn_contact contact-active" data-url="contacto">CONTÁCTAME</a>
 
 
@@ -163,7 +280,7 @@
         como herramienta de atención, entusiasta y amante de los retos mientras continuo formandome.
     </p>
     <div class="text-center text-lg-left">
-        <a class="btn_contact " href="#sobre_mi" class="menu_item" data-url="sobre_mi">DESCARGAR MI CV</a>      
+        <a class="btn_contact " href="assets/hdv Daniel Vidal.pdf" target="_blank" rel="noopener">DESCARGAR MI CV</a>      
     </div>
     </article>
 </div>
@@ -189,23 +306,23 @@
             <img src="" id="img_slideshow" class="pasar">
                 <div class="informacion">
                     <div class="informacion1" id="0" style="display: none;" data-text-mostrar="0">
-                        <h2>proyecto | Publipep</h2>
+                        <h2>Proyecto | Publipep</h2>
                         <p>Cuenta con panel administrativo de las empresas, donde el propietario puede llevar el control de los contratos, las categorias, los servicios ofrecidos y los pagos realizados por las mismas.</p>
                         <p><strong>Tecnologías: </strong><i>Php, Javascript, Jquery, Mysql, Hmtl5, Css, framework Bootstrap 3,</i> librerías <i>Alertifyjs</i> y <i>fpdf</i>.</p>
                     </div>
                     <div class="informacion2" id="1" style="display: none;" data-text-mostrar="0">
-                        <h2>proyecto | ACP</h2>
+                        <h2>Proyecto | ACP</h2>
                         <p>Cuenta con panel de administración donde el propietario con su usuario puede agregar, modificar y eliminar  cada uno de los requerimientos para la inversión.</p>
                         <p><strong>Tecnologías: </strong><i>Php, Javascript, Jquery, Mysql, Hmtl5, Css, framework Bootstrap 3,</i> y libreria <i>Alertifyjs</i></p>
                     </div>
                     <div class="informacion3" id="2" style="display: none;" data-text-mostrar="0">
-                        <h2>proyecto | Encuesta de satisfacción</h2>
+                        <h2>Proyecto | Encuesta de satisfacción</h2>
                         <p>Cuenta con panel de respuestas donde el usuario puede ver y exportar  las opiniones, sugerencias de sus clientes referente a los servicios ofrecidos. </p>
                         <p><strong>Tecnologías: </strong><i>Php, Javascript, Jquery, Mysql, Hmtl5, Css, framework Bootstrap 4,</i>  y librería <i>Sweetalert</i>.</p>    
                     </div>
                     <div class="informacion4" id="3" style="display: none;" data-text-mostrar="0">
                         <div class="text-center cont-title-btn">
-                        <h2>proyecto | <i>Landing page</i></h2>
+                        <h2>Proyecto | <i>Landing page</i></h2>
                         <a class="btn_contact " href="https://Daniel08vidal.github.io/portafolio/Lina-marcela" target="_blank"  rel="noopener">VISITAR</a>      
                         </div>
                         <p><i>Landing page</i> de tipo portafolio, cuenta con sección  acerca, servicios ofrecidos, sección de contacto donde se puede redirigir a las distintas redes sociales y  formulario de comentarios enlazado a  correo electrónico .</p>
@@ -213,7 +330,7 @@
                     </div>
                     <div class="informacion5" id="4" style="display: none;" data-text-mostrar="0">
                         <div class="text-center cont-title-btn">
-                        <h2>proyecto | <i>Landing page</i></h2>
+                        <h2>Proyecto | <i>Landing page</i></h2>
                         </div>
                         <p>Landing page de tipo portafolio.</p>
                         <p><strong>Tecnologías: </strong><i>Hmtl5, Javascript y Css</i>.</p>    
@@ -318,7 +435,7 @@
           <h3> Bootstrap</h3>
      
       </div>
-      <div class="article animado">
+      <div class="article animado" style="display: none;">
         <svg width="2500" height="1055" viewBox="0 0 256 108" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet"><path d="M152.984 37.214c-5.597 0-9.765 2.748-9.765 9.362 0 4.983 2.747 8.443 9.463 8.443 5.693 0 9.56-3.355 9.56-8.65 0-6-3.46-9.155-9.258-9.155zm-11.19 46.701c-1.325 1.625-2.645 3.353-2.645 5.39 0 4.067 5.186 5.291 12.31 5.291 5.9 0 13.938-.414 13.938-5.9 0-3.261-3.867-3.462-8.753-3.768l-14.85-1.013zm30.113-46.394c1.828 2.34 3.764 5.597 3.764 10.276 0 11.292-8.851 17.904-21.667 17.904-3.259 0-6.209-.406-8.038-.914l-3.359 5.39 9.969.61c17.602 1.122 27.975 1.632 27.975 15.157 0 11.702-10.272 18.311-27.975 18.311-18.413 0-25.433-4.68-25.433-12.716 0-4.578 2.035-7.015 5.596-10.378-3.358-1.419-4.476-3.961-4.476-6.71 0-2.24 1.118-4.273 2.952-6.208 1.83-1.93 3.864-3.865 6.306-6.103-4.984-2.442-8.75-7.732-8.75-15.262 0-11.697 7.733-19.731 23.295-19.731 4.376 0 7.022.402 9.362 1.017h19.84v8.644l-9.361.713zM199.166 19.034c-5.8 0-9.157-3.36-9.157-9.161 0-5.793 3.356-8.95 9.157-8.95 5.9 0 9.258 3.157 9.258 8.95 0 5.801-3.357 9.161-9.258 9.161zM186.04 80.171v-8.033l5.19-.71c1.425-.205 1.627-.509 1.627-2.038V39.48c0-1.116-.304-1.832-1.325-2.134l-5.492-1.935 1.118-8.238h21.061V69.39c0 1.63.098 1.833 1.629 2.039l5.188.71v8.032H186.04zM255.267 76.227c-4.376 2.135-10.785 4.068-16.586 4.068-12.106 0-16.682-4.878-16.682-16.38V37.264c0-.61 0-1.017-.817-1.017h-7.12V27.19c8.955-1.02 12.513-5.496 13.632-16.585h9.666v14.45c0 .71 0 1.017.815 1.017h14.343v10.173H237.36v24.313c0 6.002 1.426 8.34 6.917 8.34 2.852 0 5.799-.71 8.24-1.626l2.75 8.954" fill="#2F2707"/><path d="M104.529 49.53L58.013 3.017a6.86 6.86 0 0 0-9.703 0l-9.659 9.66 12.253 12.252a8.145 8.145 0 0 1 8.383 1.953 8.157 8.157 0 0 1 1.936 8.434L73.03 47.125c2.857-.984 6.154-.347 8.435 1.938a8.161 8.161 0 0 1 0 11.545 8.164 8.164 0 0 1-13.324-8.88L57.129 40.716l-.001 28.98a8.248 8.248 0 0 1 2.159 1.544 8.164 8.164 0 0 1 0 11.547c-3.19 3.19-8.36 3.19-11.545 0a8.164 8.164 0 0 1 2.672-13.328v-29.25a8.064 8.064 0 0 1-2.672-1.782c-2.416-2.413-2.997-5.958-1.759-8.925l-12.078-12.08L2.011 49.314a6.863 6.863 0 0 0 0 9.706l46.516 46.514a6.862 6.862 0 0 0 9.703 0l46.299-46.297a6.866 6.866 0 0 0 0-9.707" fill="#DE4C36"/></svg>
           <h3> Git</h3>  
  
